css/styles.css
:root {
    --primary-color: #c7dde3;
    --secondary-color: #ffb6c1; 
    --standard-padding: 15px;

}

/*RESETS*/


/* JUMBOTRON */
.jumbotron {
    background-image: url(../images/02-hero-bg.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


/* NAV */
.nav {
    justify-content: end;
    background-color: var(--primary-color);
}

.nav a {
    color: #ffffff; 
    cursor: pointer;
}

.nav a:hover {
    text-decoration: underline;
}

/* MAIN STYLES */

.container {
    margin: auto;
}

.about-sec {
    border: 2px solid #cdc5c59f;
    border-radius: 20px;
    padding: var(--standard-padding);
    display: flex;
    justify-content: space-around;
}

.sectionHeading {
    text-align: center;
    padding: var(--standard-padding);
}

.imageContainer img {
    width: 120%;
}

/* Portfolio */

.card-img-top {
    width: 100%; 
    height: 45vw;
    object-fit: cover; 
}

/* SKILLS */

.skills-sec {
    display: flex;
    align-items: center;
}

.logos {
    width: 55%;
}

.center-block {
    display: block;
    margin-left: auto;
    margin-right: auto;
 }

 figcaption {
    text-align: center;
 }

 .logos-1 {
    width: 50%;
 }

 /* Contact */
h3 {
    text-align: center;
}

.btn {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

button {
    width: 150px;
}

